--- a/assets/css/header.scss
+++ b/assets/css/header.scss
@@ -427,6 +427,11 @@
                     &.active {
                         opacity: 1;
                         transition-delay: .65s;
+
+                        .nav__label {
+                                                    color: white;
+
+                        }
                     }
 
                     .ghost-btn {
